# F24-CS160-05-Team-N992

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker_build_and_run.sh  docker_dev.sh  pyproject.toml  run_dev.sh
backend/app/: main.py
backend/app/database/: db.py
backend/app/models/: article.py  user.py
backend/app/routers/: article_routes.py  articles.py  personas.py  users.py
k8s/: README.md  up.sh
webscraper/: README.md  channel_ids.txt  environment.json  harpy.py  persona.json  pyproject.toml  run_dev.sh  youtube-transcript-fetcher-readme.md  yt_transcript_fetch.py
webscraper/app/: main.py
webscraper/app/database/: db.py
webscraper/app/lib/: credentials.py  logging.py
webscraper/app/lib/articles/: article.py
webscraper/app/lib/llm/: CLI_parser_json_video.py  article_summarizer.py  llm_filler_video.py  llm_processor.py
webscraper/app/lib/llm/testbench/: helloworld_OpenAPI.py  llm-summarizer_videos.py
webscraper/app/lib/llm_scripts/: CLI_parser_json_video.py  llm_filler_video.py  llm_processor.py
webscraper/app/lib/llm_scripts/testbench/: helloworld_OpenAPI.py  llm-summarizer_videos.py
webscraper/app/lib/personas/: persona.json  persona.py
webscraper/app/lib/scrapings/bbc/: bbc-news-scraper.py  bbc_article_fetch.py  scraper.py  transform.py
webscraper/app/lib/scrapings/youtube/: get-channel-id.py  yt_transcript_fetch.py
webscraper/app/models/: article.py  persona.py
webscraper/app/routers/: webscraper.py
webscraper/channel_data/: UCCu5wtZ5uOWZp_roz7wHPfg_data.json  UCJpYnMu4yIidVyxaNrk7AqQ_data.json  UCRBwLPbXGsI2cJe9W1zfSjQ_data.json  UCRRr_xrOm66qaigIbwFLvbQ_data.json  UCb72Gn5LXaLEcsOuPKGfQOg_data.json  UCuVLG9pThvBABcYCm7pkNkA_data.json
webscraper/data/: channel_ids copy.txt  channel_names.txt  input.txt  scraped_bbc_articles.json
webscraper/data/channel_data/: UCCu5wtZ5uOWZp_roz7wHPfg_data.json  UCRBwLPbXGsI2cJe9W1zfSjQ_data.json  UCb72Gn5LXaLEcsOuPKGfQOg_data.json  UCuVLG9pThvBABcYCm7pkNkA_data.json
(+28 files in other folders)
