[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
ratelimit = "^2.2.1"
google-api-python-client = "^2.149.0"
python-dotenv = "^1.0.1"
youtube-transcript-api = "^0.6.2"
anthropic = "^0.36.2"
openai = "^1.52.0"
motor = "^3.6.0"
aiohttp = "^3.10.10"
kubernetes = "^31.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
